# ddp-resnet101-cifar10

./: README.md  pyproject.toml  train.py  train_fp16.py
